[package]
name = "find-target"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Find target directory"
repository = "https://github.com/oovm/tiny-png"
documentation = "https://docs.rs/find-target"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dev-dependencies]

[features]
default = []
