[package]
name = "tiny-png"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "tiny-png"
path = "src/cli/mod.rs"

[dependencies]
oxipng = "6.0.1"
globset = "0.4.9"
bytesize = "1.1.0"
eta = "0.2.2"
walkdir = "2.3.2"
twox-hash = "1.6.3"

[dependencies.clap]
version = "4.0.26"
#optional = true

[dependencies.find-target]
#version = "0.1.0"
path = "../find_target"

[dev-dependencies]

[features]
default = []
