[package]
name = "image-reducer"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/tiny-png"
documentation = "https://docs.rs/image-reducer"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
oxipng = "6.0.1"
globset = "0.4.9"
bytesize = "1.1.0"
eta = "0.2.2"
async-walkdir = "0.2.0"
twox-hash = "1.6.3"
log = "0.4.17"
futures = "0.3.25"
env_logger = "0.9.3"
chrono = "0.4.23"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
relative-path = "1.7.2"
colored = "2.0.0"

[dependencies.find-target]
version = "0.1.0"
#path = "../find_target"

[dev-dependencies]

[features]
default = []
